--- a/apache-config.conf
+++ b/apache-config.conf
@@ -1,15 +1,8 @@
 <VirtualHost *:80>
-  ServerAdmin me@mydomain.com
-  DocumentRoot /var/www/spip
+        ServerAdmin webmaster@localhost
+        DocumentRoot /var/www/spip
 
-  <Directory /var/www/spip/>
-      Options Indexes FollowSymLinks MultiViews
-      AllowOverride All
-      Order deny,allow
-      Allow from all
-  </Directory>
-
-  ErrorLog ${APACHE_LOG_DIR}/error.log
-  CustomLog ${APACHE_LOG_DIR}/access.log combined
-
+        ErrorLog ${APACHE_LOG_DIR}/error.log
+        CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
+
